--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@mui/system": "^7.3.2",
+    "html2pdf.js": "^0.12.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
