--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@mui/system": "^7.3.2",
+    "framer-motion": "^12.23.12",
     "html2pdf.js": "^0.12.0",
+    "lottie-react": "^2.4.1",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
