--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@mui/system": "^7.3.2",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.23.12",
     "html2pdf.js": "^0.12.0",
     "lottie-react": "^2.4.1",
