--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "framer-motion": "^12.23.12",
     "html2pdf.js": "^0.12.0",
     "lottie-react": "^2.4.1",
-    "next": "15.5.2",
+    "next": "^15.5.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
